# opentelemetry-instrument-anthropic-py

./: .gitignore  README.md  pyproject.toml
example/: .env.example  README.md  chat.py  pyproject.toml
src/opentelemetry/instrumentation/anthropic/: __init__.py  package.py
