[tool.poetry]
name = "chat-example"
version = "0.0.1"
description = "Testing this"
authors = ["Frank Chen <frxchen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opentelemetry-api = "~=1.18.0"
opentelemetry-instrument-anthropic = {path = "../", develop = true}
opentelemetry-distro = "^0.39b0"
opentelemetry-exporter-otlp = "^1.18.0"
anthropic = "0.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
